--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,10 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.5.RELEASE</version>
+        <version>2.2.5.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.notebook</groupId>
+    <groupId>com.notebook.service</groupId>
     <artifactId>notebook-as-service</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <name>notebookLanguage</name>
@@ -40,14 +40,14 @@
         <dependency>
             <groupId>org.graalvm.truffle</groupId>
             <artifactId>truffle-dsl-processor</artifactId>
-            <version>19.0.0</version>
+            <version>20.0.0</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.graalvm.sdk</groupId>
             <artifactId>graal-sdk</artifactId>
-            <version>19.0.0</version>
+            <version>20.0.0</version>
             <scope>provided</scope>
         </dependency>
 
